# limen

./: .gitignore  LICENSE  README.md  limen.toml  pyproject.toml
.github/workflows/: tests.yml
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DESIGN_DECISIONS.md  DIAGRAM.md  MEMORY.md  OPERATIONS.md  SPECIALISTS.md  THEORY.md
evals/: __init__.py  harness.py  run.py  scenarios.py
examples/: add_a_specialist.py  blog_migration.py
limen/: __init__.py  __main__.py  attention.py  bus.py  cli.py  config.py  cycle.py  embeddings.py  interoception.py  mind.py  population.py  sensors.py  timekeeper.py  tools.py  util.py  workspace.py
limen/memory/: __init__.py  consolidation.py  episodic.py  ledger.py  procedural.py
limen/providers/: __init__.py  anthropic.py  base.py  mock.py
limen/specialists/: __init__.py  base.py  executive.py  expression.py  oracle.py  perception.py  reflective.py
misc/: limen-presentation.html
tests/: test_attention.py  test_cycle_integration.py  test_embeddings.py  test_evals.py  test_ledger.py  test_provider.py  test_sensors.py  test_time_and_population.py
